progress on proj 3

--- a/index.html
+++ b/index.html
@@ -298,20 +298,19 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr class="current-week">
     <td>Sept 18</td>
-    <td>Document and Window Objects</td>
+    <td><a href="lessons/document-window-objects.html">Document and Window Objects</a></td>
    
     <td><a href="http://online.santarosa.edu/testbank/?24867">Quiz 2</a></td>
   </tr>
   <tr>
     <td>Sept 25</td>
     <td>no class</td>
-    <td>Project 3</td>
+    <td><a href="projects/slideshow/index.html">Project 3</a></td>
   
   </tr>
   <tr>
     <td>Oct 2</td>
-    <td>Structured Data - Arrays
-JSON</td>
+    <td>Structured Data - <a href="lessons/arrays.html">Arrays</a> JSON</td>
     
     <td>Project 4</td>
   </tr>
