added proj 4, updated home, started proj 5

--- a/lessons/data-types.html
+++ b/lessons/data-types.html
@@ -80,8 +80,10 @@ display.innerHTML = "Today is " + day;
                             <li><strong>Javascript: A Beginner's Guide</strong> &mdash; Chapters 12 &amp; 13</li>
                             <li><strong>Javascript &amp; JQuery The Missing Manual</strong> &mdash; pages 41-45</li>
                         </ul>
-                        
-                       
+                        <h3>Articles</h3>
+                        <ul>
+                          <li><a href="http://www.i-programmer.info/programming/javascript/4862-master-javascript-regular-expressions.html">Master Javascript Regular Expressions</a></li>
+                      </ul>
                     </section>
                 </section>
             </div>
