--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -11,27 +11,28 @@
     <body>
         <div class=container>
             <div class=row>
-                <h2>Project 3: Building a Calculator Widget</h2>
+                <h2>Project 4: Designing a Calculator Widget</h2>
             </div>
             <div class=row>
                 <div class=span6>
                     <div class=well>
-                        <h4>This Project is due SOMETIME at midnight.</h4>
-                        <h4>What you will learn in this project</h4>
+                        <h4>This project is due on October 16 at midnight.</h4>
+                      <h4>What you will learn in this project</h4>
                         <ul>
+                            <li>Designing applications in Javascript</li>
                             <li>Events and Event Handlers
-                                <ul>
-                                    <li>
-                                        <a href=https://developer.mozilla.org/en-US/docs/DOM/event#DOM_Event_interface>
-                                            DOM Event Interface
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href=https://developer.mozilla.org/en-US/docs/DOM/element.addEventListener>
-                                            element.addEventListener()
-                                        </a>
-                                    </li>
-                                </ul>
+                              <ul>
+                                <li>
+                                  <a href=https://developer.mozilla.org/en-US/docs/DOM/event#DOM_Event_interface>
+                                  DOM Event Interface
+                                  </a>
+                                </li>
+                                <li>
+                                  <a href=https://developer.mozilla.org/en-US/docs/DOM/element.addEventListener>
+                                  element.addEventListener()
+                                  </a>
+                                </li>
+                              </ul>
                             </li>
                             <li>Newer DOM Query Methods
                                 <ul>
