Completed JSON lesson.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr class="current-week">
     <td>Oct 2</td>
-    <td>Structured Data - <a href="lessons/arrays.html">Arrays</a> JSON</td>
+    <td>Structured Data - <a href="lessons/arrays.html">Arrays</a> &amp; <a href="lessons/json.html">JSON</a></td>
     
     <td><a href="projects/calculator/index.html">Project 4</a></td>
   </tr>
