uploaded json lesson and minor changes

--- a/lessons/json.html
+++ b/lessons/json.html
@@ -22,7 +22,7 @@
                         <small><a href=http://json.org target=_blank>json.org</a></small>
                     </blockquote>
                     <p>Due to its simplicity, human-readability, and support in
-                        many programming languages, JSON has has become the
+                        many programming languages, JSON has become the
                         <em>de facto</em> standard for transmitting data on the
                         web.  In so doing, it has supplanted competing technologies,
                         such as XML.</p>
@@ -166,6 +166,7 @@ var clone = JSON.parse(personJson);
                                     JSON (Mozilla Developer Network)
                                 </a>
                             </li>
+                            <li><a href="http://www.w3schools.com/json/default.asp">w3Schools JSON Tutorial</a></li>
                         </ul>
                     </section>
                 </section>
