--- a/examples/registration/index.html
+++ b/examples/registration/index.html
@@ -2,9 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Computer Studies Registration</title>
+<link rel="stylesheet" href="../../bootstrap/css/bootstrap.css" />
+<link rel="stylesheet" href="registration.css" />
 </head>
 
 <body>
+<form>
+<select id="courses">
+<option>Choose a Course</option>
+</select>
+<br>
+<select id="sections">
+<option>Choose a Section</option>
+</select>
+</form>
+<script type="text/javascript" src="../../bootstrap/js/jquery.js"></script>
+<script type="text/javascript" src="register.js">
+
+</script>
+
 </body>
 </html>
