jquery lesson, update site, restarting proj 5

--- a/examples/registration/index.html
+++ b/examples/registration/index.html
@@ -9,14 +9,16 @@
 
 <body>
 <form>
-<select id="courses">
+<input class="input-large" type="text" placeholder="Student Name">
+<select id="courses" size=5>
 <option>Choose a Course</option>
 </select>
 <br>
-<select id="sections">
+<select id="sections" size=5>
 <option>Choose a Section</option>
 </select>
 </form>
+<table class="table-striped" id="schedule"><tbody></tbody></table>
 <script type="text/javascript" src="../../bootstrap/js/jquery.js"></script>
 <script type="text/javascript" src="register.js">
 
