--- a/examples/courses/index.html
+++ b/examples/courses/index.html
@@ -3,20 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title>Courses</title>
-<link href="../../bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="bootstrap.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+select {
+	width:400px;
+}
+</style>
 </head>
 
 <body>
-<form>
-  <legend>Register for an Online Class at Santa Rosa Junior College</legend>
-  <label>Your Name</label>
-  <input type="text" placeholder="Student Name">
-  <span class="help-block">Example block-level help text here.</span>
-  <label class="checkbox">
-    <input type="checkbox"> Check me out
-  </label>
-  <button type="submit" class="btn">Submit</button>
+<div class="container">
+<form class="form-horizontal" action="#" id="studentForm">
+    <legend>Learn Web Design Online &#64; Santa Rosa Junior College</legend>
+    <div class="control-group">
+    <label class="control-label" for="inputName">Name</label>
+    <div class="controls">
+      <input type="text" id="inputName" placeholder="Student Name" required pattern="^(\w+)\s+(?:(\w+)\s+){0,1}(\w+){0,1}$">
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label" for="inputEmail">Email</label>
+    <div class="controls">
+      <input type="email" id="inputEmail" placeholder="Email" required>
+    </div>
+  </div> 
+  <div class="control-group">
+    <div class="controls">
+      <button type="submit" class="btn btn-primary" id="getStudent">Get Started</button>
+    </div>
+  </div>
 </form>
-
+ <section id="schedule"><section id="courseList"></section><section id="sectionList"></section></section>
+</div>
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="courses.js"></script>
 </body>
 </html>
