Improved assignment wording for calculator project.

--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -655,7 +655,10 @@ enterBtn.addEventListener('click', computeAnswer, false);
                         <li>
                             Add a minus sign key to the calculator, which will
                             allow you to create a negative number if it is pressed
-                            as the first "digit" for an operand.
+                            as the first "digit" for an operand; otherwise, the key
+                            can be ignored.  (Alternately, you can implement a
+                            plus/minus key which will toggle the current operator
+                            between a positive and negative value.)
                         </li>
                     </ul>
                     <p><span class="label label-info">Extra Credit</span> Change
