--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         <div class="span6">   
         <div class="well">
         <h1 class="label label-inverse"><span class="lead">What's New</span></h1>   
-     <p class="lead"><a href="/~jperetz/fall2012/projects/calculator/">Project 4: Calculator Widget</a>  Due date is October 16.</p> 
+    
      <p class="lead">Read this lesson about <a href="lessons/jquery.html">JQuery</a></p>
      <p class="lead">Read this lesson about <a href="lessons/json.html">JSON</a></p>
      <p class="lead"> <a href="projects/forms/index.html">Project 5: Enhancing Forms</a></p>
+    <p class="lead">  <a href="http://online.santarosa.edu/testbank/?24868">Quiz 3 open 10/31 - 11/05</a></p>
+      <p class="lead"> <a href="projects/wordcount/index.html">Project 6:  Keyword Search and Data Visualization</a></p>
      </div>
       <h2>Course Information</h2>
           
@@ -332,30 +334,31 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td>Oct 23</td>
     <td>Forms and JSON Part 2</a></td>
    
-    <td>Project 5</td>
-  </tr class="current-week">
+    <td><a href="projects/forms/">Project 5</a></td>
+  </tr>
   <tr>
     <td>Oct 30</td>
     <td>Working with Text and Data Visualization</td>
-    <td><a href="http://online.santarosa.edu/testbank/?24868">Quiz 3 10/31 - 11/05</a></td>
+    <td><a href="http://online.santarosa.edu/testbank/?24868">Quiz 3</a><br>
+</td>
    
   </tr>
-  <tr>
+  <tr class="current-week">
     <td>Nov 6</td>
-    <td>JQuery Forms and Dialogs </td>
+    <td>Dynamic Webpage Layouts</td>
   
-    <td><a href="http://online.santarosa.edu/testbank/?24869">Quiz 4</a></td>
+    <td><a href="projects/wordcount/">Project 6</a></td>
   </tr>
   <tr>
     <td>Nov 13 </td>
     <td>no class</td>
    
-    <td>&nbsp;</td>
+    <td><a href="http://online.santarosa.edu/testbank/?24869">Quiz 4</a>&nbsp;</td>
   </tr>
   <tr>
     <td>Nov 20</td>
     <td>JQuery UI</td>
-    <td>Project 6</td>
+    <td>Project 7</td>
    
   </tr>
   <tr>
@@ -367,7 +370,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
    <tr>
     <td>Dec 4</td>
     <td>Web data services</td>
-    <td>Project 7</td>
+    <td>Project 8</td>
    
   </tr>
    <tr>
@@ -392,7 +395,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
     <li><a href="http://student.santarosa.edu/~apowers/"><i class="icon-user"></i> Angie</a></li>
     <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
-    <li><a href="http://www.calwalker.com/Assignment1/index.html"><i class="icon-user"></i> Calvin</a></li>
+    <li><a href="http://justme.calwalker.com/Assignment1/index.html"><i class="icon-user"></i> Calvin</a></li>
   <li><a href="http://student.santarosa.edu/~cguempe1/cs5511/index.html"><i class="icon-user"></i>   Carlene</a></li>
     <li><a href="http://student.santarosa.edu/~cwhitehe/js/index.html"><i class="icon-user"></i> Clark</a></li>
     <li><a href="http://student.santarosa.edu/~dlangdon/js/homework.html"><i class="icon-user"></i> DiAnn</a></li>
