--- a/examples/wordcount2/debate.html
+++ b/examples/wordcount2/debate.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Presidential Debate Global Heatmaps</title>
+<title>Presidential Debate III</title>
 <script type='text/javascript' src='https://www.google.com/jsapi'></script>
 <link href="../../bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="wordcount.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <div class="container">
-<h1 class="lead">Global Heatmap of the Presidential Debates</h1>
 <div class="btn-group">
   <button class="btn btn-primary" id="debate1">Debate 1</button>
   <button class="btn btn-primary" id="debate2">Debate 2</button>
@@ -18,7 +16,6 @@
 </div>
 
 <div id="mentionmap"></div>
-<div id="transcript"></div>
 </div>
 <script src="jquery.js" type="text/javascript"></script>
 <script src="wordcount.js" type="text/javascript"></script>
