updated project 6 deliverables

--- a/projects/wordcount/index.html
+++ b/projects/wordcount/index.html
@@ -16,7 +16,7 @@
             <div class=row>
                 <div class=span12>
                     <div class=well>
-                        <h4>This project is due on November 15 at midnight.</h4>
+                        <h4>This project is due on November 22 at midnight.</h4>
                        
                       <h4>What you will learn in this project</h4>
        <p>In project 5 we presented structured data to a user, enabled them to make selections and captured the resulting data as a 'transaction'. </p>
@@ -170,9 +170,11 @@ $(".btn-primary").click(function () {
                 <div class=span12>
                 <h2>Assignment</h2>
                 <ol>
-               <li>Fix the bug so that the program does not perform the text match twice.     </li>
-                 <li>Add a Google Visualization Table to the display.  Optionally you can integrate it to the map in some way, perhaps by placing it as an overlay or hover overlay on the map</li>
-                 <li></li>
+               <li>Fix the bug so that the program does not perform the text match twice. (see lecture November 6)   </li>
+                 <li>Add a Google Visualization Table to the display.  Optionally you can integrate it to the map in some way, perhaps by placing it as an overlay or hover overlay on the map (see lecture Nov 6)</li>
+                 <li><strong>Add another row to the table we created in the Nomember 6 lecture that totals the instances for all countries.</strong></li>
+                 <li><strong>Add a feature where where the user can click on a county in the table and all the instances of that word are highlighted on the page.</strong></li>
+                 <li><strong>Add a section to the page that displays the total number of words in each debate.</strong></li>
                 
                 </ol>
                 </div>
