syncing prior to project 8 mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
  
     <p class="lead">  <a href="http://online.santarosa.edu/testbank/?24869">Quiz 4 open 11/15 - 11/21</a></p>
       <p class="lead"> <a href="projects/wordcount/index.html">Project 6:  Keyword Search and Data Visualization</a></p>
+      
+       <p class="lead">November 20 lecture: Responsive and Interactive Webpages<br>
+ <a href="examples/metasequoia-start.zip">Download the Starter Files</a><br>
+ <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a><br>
+<a href="http://www.google.com/webfonts">Google Web Fonts API</a><br>
+<a href="https://developers.google.com/maps/documentation/javascript/tutorial">Google Maps Javascript API</a><br>
+ <a href="examples/metasequoia-112012/">The Working Project as of the November 20 Lecture</a><br>
+</p>
      </div>
       <h2>Course Information</h2>
           
@@ -344,7 +352,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr>
     <td>Nov 6</td>
-    <td>Dynamic Webpage Layouts</td>
+    <td>Working with Text and Data Visualization</td>
   
     <td><a href="projects/wordcount/">Project 6</a></td>
   </tr>
@@ -356,7 +364,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr class="current-week">
     <td>Nov 20</td>
-    <td>JQuery UI</td>
+    <td>Responsive and Interactive Pages</td>
     <td>Project 7</td>
    
   </tr>
